welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:8: error: 'while' expected but '}' found.
	}} while(!estSurBiscuit)
         ^SlugHunting:8: error: ';' expected but 'while' found.
	}} while(!estSurBiscuit)
           ^